# Learning-Platform

./: .gitignore  docker-compose.yml  package-lock.json
.cursor/rules/: client.mdc  server.mdc
client/: .env.example  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
client/src/: index.css  main.jsx  main.tsx  vite-env.d.ts
client/src/api/: auth.api.js  client.js  client.ts  courses.api.js  generation.api.js  lessons.api.js  media.api.js  queryKeys.js
client/src/lib/: cn.ts  env.js  env.ts  errors.js  htmlToMarkdown.js  (+5 more)
server/: .env.example  pyproject.toml  requirements.txt
server/apps/courses/: admin.py  explore_urls.py  models.py  serializers.py  services.py  urls.py  views.py
server/apps/courses/migrations/: 0001_initial.py  0002_module_lesson.py  0003_lesson_unique_lesson_order_per_module_and_more.py
server/apps/generation/: exceptions.py  html_to_markdown.py  parser.py  prompts.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
server/apps/media/: admin.py  exceptions.py  models.py  serializers.py  urls.py  views.py
server/apps/media/migrations/: 0001_initial.py
server/apps/media/services/: __init__.py  tts.py  youtube.py
server/apps/progress/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
server/apps/progress/migrations/: 0001_initial.py
server/apps/users/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
server/apps/users/migrations/: 0001_initial.py
server/config/: settings.py  urls.py
server/config/settings/: base.py  local.py  production.py
(+107 files in other folders)
