[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "django>=4.2.30",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "google-genai>=1.47.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.1",
]
